--- a/pom.xml
+++ b/pom.xml
@@ -1,58 +1,91 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-        <modelVersion>4.0.0</modelVersion>
-        <groupId>in.javahome</groupId>
-        <artifactId>myweb</artifactId>
-        <packaging>war</packaging>
-        <version>0.0.9</version>
-        <name>my-app</name>
-        <url>http://maven.apache.org</url>
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Codespaces
+Marketplace
+Explore
+ 
+@simpleritgibhub 
+javahometech
+/
+my-app
+Public
+Code
+Issues
+1
+Pull requests
+101
+Actions
+Projects
+Security
+Insights
+my-app/pom.xml
+@javahometech
+javahometech Update pom.xml
+Latest commit 79017e4 on Jul 11
+ History
+ 2 contributors
+@javahometech@invalid-email-address
+Executable File  45 lines (43 sloc)  1.31 KB
 
-        <dependencies>
-                <dependency>
-                        <groupId>javax.servlet</groupId>
-                        <artifactId>javax.servlet-api</artifactId>
-                        <version>3.0.1</version>
-                        <!-- <scope>provided</scope> -->
-                </dependency>
-                <dependency>
-                        <groupId>junit</groupId>
-                        <artifactId>junit</artifactId>
-                        <version>3.8.1</version>
-                        <scope>test</scope>
-                </dependency>
-                <dependency>
-                    <groupId>com.lowagie</groupId>
-                    <artifactId>itext</artifactId>
-                    <version>2.1.7</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.apache.poi</groupId>
-                    <artifactId>poi</artifactId>
-                    <version>5.2.0</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.apache.poi</groupId>
-                    <artifactId>poi-ooxml</artifactId>
-                    <version>5.2.0</version>
-                </dependency>
-        </dependencies>
-        <properties>
-                <maven.compiler.source>7</maven.compiler.source>
-                <maven.compiler.target>1.7</maven.compiler.target>
-        </properties>
-        <build>
-                <plugins>
-                        <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-war-plugin</artifactId>
-    <version>3.3.1</version>
-</plugin>
-<plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-compiler-plugin</artifactId>
-      <version>3.8.1</version>
-</plugin>
-                </plugins>
-        </build>
-                           </project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>in.javahome</groupId>
+	<artifactId>myweb</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.9</version>
+	<name>my-app</name>
+	<url>http://maven.apache.org</url>
+
+	<dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<!-- <scope>provided</scope> -->
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.lowagie</groupId>
+		    <artifactId>itext</artifactId>
+		    <version>2.1.7</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>5.2.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>5.2.0</version>
+		</dependency>
+	</dependencies>
+	<properties>
+   		<maven.compiler.source>6</maven.compiler.source>
+   		<maven.compiler.target>1.6</maven.compiler.target>
+ 	</properties>
+	
+</project>
+Footer
+© 2022 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+my-app/pom.xml at master · javahometech/my-app
